added project nature

--- a/BusinessModule/pom.xml
+++ b/BusinessModule/pom.xml
@@ -17,4 +17,12 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<dependencies>
+		<dependency>
+			<groupId>com.app.modules.SocialModule</groupId>
+			<artifactId>SocialModule</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
 </project>
